# attenpy

./: AGENTS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
attenpy/: __init__.py  client.py  exceptions.py  http.py  models.py  pagination.py  ref.py  snowflake.py  types.py  utils.py  ws.py
attenpy/endpoints/: __init__.py  notices.py  posts.py  users.py
attenpy/models/: __init__.py  attachment.py  base.py  notice.py  post.py  user.py  ws.py
attenpy/payloads/: __init__.py  notice.py  post.py  ws.py
attenpy/types/: __init__.py  base.py
