[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "attenpy"
version = "0.2.1"
description = "SDK for AttenAPI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.9.0",
    "pydantic>=2.0.0",
]
license = { text = "MIT" }
authors = [
  { name = "AttenTeam" }
]

[project.urls]
Homepage = "https://atten.win/"
Repository = "https://github.com/attensns/attenpy"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[tool.setuptools.packages.find]
include = ["attenpy*"]
